[gd_scene load_steps=10 format=4 uid="uid://b6ck7ens7uln0"]

[ext_resource type="Script" path="res://roomGeneration/pandora_factory/rooms/Room.gd" id="1_y8knk"]
[ext_resource type="Script" path="res://roomGeneration/pandora_factory/rooms/camera_lock.gd" id="2_pwuvw"]
[ext_resource type="TileSet" uid="uid://ogtnrof6qx5l" path="res://roomGeneration/pandora_factory/rooms/interactTileset.tres" id="5_grut7"]
[ext_resource type="TileSet" uid="uid://dtwfi3wxt0y64" path="res://roomGeneration/pandora_factory/rooms/tileset2.tres" id="9_cjttt"]
[ext_resource type="Script" path="res://interact_map.gd" id="10_jx0bq"]
[ext_resource type="PackedScene" uid="uid://c8lammboni3eu" path="res://roomGeneration/pandora_factory/rooms/enemy_maneger.tscn" id="11_x2sq5"]
[ext_resource type="Texture2D" uid="uid://dgp4ducuq2u3b" path="res://pixel art/room_front.png" id="12_w0qmp"]
[ext_resource type="PackedScene" uid="uid://ppco7jdojtb" path="res://effect_layer.tscn" id="14_1t3ju"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmswj"]
resource_local_to_scene = true
size = Vector2(1984, 1984)

[node name="Base3" type="Node2D" node_paths=PackedStringArray("camera_lock", "enemy_manager")]
y_sort_enabled = true
script = ExtResource("1_y8knk")
camera_lock = NodePath("camera_lock")
enemy_manager = NodePath("enemy_maneger")

[node name="camera_lock" type="Area2D" parent="." node_paths=PackedStringArray("border")]
script = ExtResource("2_pwuvw")
border = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera_lock"]
position = Vector2(992, 992.5)
shape = SubResource("RectangleShape2D_kmswj")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="enemy_maneger" parent="." instance=ExtResource("11_x2sq5")]
overtime_budget = 10.0

[node name="tiles" type="TileMapLayer" parent="."]
z_index = -5
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAAABwAAAAAAAAABAAAABwABAAAAAAACAAAABwABAAAAAAADAAAABwABAAAAAAAEAAAABwABAAAAAAAFAAAABwABAAAAAAAOAAAABAABAAAAAAANAAAABAAAAAAAAAAMAAAABAADAAQAAAALAAAABAADAAQAAAAKAAAABAADAAQAAAAJAAAABwACAAAAAAAIAAAABwABAAAAAAAHAAAABwABAAAAAAAGAAAABwABAAAAAAAPAAEABAABAAEAAAAeAAAABwACAAAAAAAdAAAABwABAAAAAAAcAAAABwABAAAAAAAbAAAABwABAAAAAAAaAAAABwABAAAAAAAZAAAABwABAAAAAAAYAAAABwABAAAAAAAXAAAABwABAAAAAAAWAAAABwABAAAAAAAUAAAABAADAAQAAAATAAAABAADAAQAAAASAAAABAADAAQAAAARAAAABAACAAAAAAAQAAAABAABAAAAAAAAAA4ABAAAAAEAAAAAAA0ABAAAAAAAAAAAAAoABAADAAQAAAAAAAkABwAAAAIAAAAAAAgABwAAAAEAAAAAAAcABwAAAAEAAAAAAAYABwAAAAEAAAAAAAUABwAAAAEAAAAAAAQABwAAAAEAAAAAAAMABwAAAAEAAAAAAAIABwAAAAEAAAAAAAEABwAAAAEAAAABAA8ABAABAAEAAAAAABgABwAAAAEAAAAAABcABwAAAAEAAAAAABYABwAAAAEAAAAAABUABwAAAAAAAAAAABQABAADAAQAAAAAABMABAADAAQAAAAAABIABAADAAQAAAAAABEABAAAAAIAAAAAABAABAAAAAEAAAAAAB4ABwAAAAIAAAAAAB0ABwAAAAEAAAAAABwABwAAAAEAAAAAABsABwAAAAEAAAAAABoABwAAAAEAAAAAABkABwAAAAEAAAAeAB4ABwACAAIAAAAeAB0ABwACAAEAAAAeABwABwACAAEAAAAeABsABwACAAEAAAAeABoABwACAAEAAAAeABkABwACAAEAAAAeABgABwACAAEAAAAeABcABwACAAEAAAAeABYABwACAAEAAAAeABUABwACAAAAAAAeABQABAADAAQAAAAeABMABAADAAQAAAAeABIABAADAAQAAAAeABEABAACAAIAAAAeABAABAACAAEAAAAeAA8ABAACAAEAAAAeAA4ABAACAAEAAAAeAAwABAADAAQAAAAeAAsABAADAAQAAAAeAAoABAADAAQAAAAeAAkABwACAAIAAAAeAAgABwACAAEAAAAeAAcABwACAAEAAAAeAAYABwACAAEAAAAeAAUABwACAAEAAAAeAAQABwACAAEAAAAeAAMABwACAAEAAAAeAAIABwACAAEAAAAeAAEABwACAAEAAAAdAB4ABwABAAIAAAAdAB0ABwABAAEAAAAdABwABwABAAEAAAAdABsABwABAAEAAAAdABoABwABAAEAAAAdABkABwABAAEAAAAdABgABwABAAEAAAAdABcABwABAAEAAAAdABYABwABAAEAAAAdABUABwABAAAAAAAdABQABAADAAQAAAAdABMABAADAAQAAAAdABIABAADAAQAAAAdABEABAABAAIAAAAdABAABAABAAEAAAAdAA8ABAABAAEAAAAdAA4ABAABAAEAAAAdAA0ABAABAAAAAAAdAAwABAADAAQAAAAdAAsABAADAAQAAAAdAAoABAADAAQAAAAdAAkABwABAAIAAAAdAAgABwABAAEAAAAdAAcABwABAAEAAAAdAAYABwABAAEAAAAdAAUABwABAAEAAAAdAAQABwABAAEAAAAdAAMABwABAAEAAAAdAAIABwABAAEAAAAdAAEABwABAAEAAAAcAB4ABwABAAIAAAAcAB0ABwABAAEAAAAcABwABwABAAEAAAAcABsABwABAAEAAAAcABoABwABAAEAAAAcABkABwABAAEAAAAcABgABwABAAEAAAAcABcABwABAAEAAAAcABYABwABAAEAAAAcABUABwABAAAAAAAcABQABAADAAIAAAAcABMABAADAAEAAAAcABIABAADAAEAAAAcABEABAAEAAEAAAAcABAABAAGAAEAAAAcAA8ABAABAAEAAAAcAA4ABAAGAAIAAAAcAA0ABAAEAAIAAAAcAAwABAADAAEAAAAcAAsABAADAAEAAAAcAAoABAADAAAAAAAcAAkABwABAAIAAAAcAAgABwABAAEAAAAcAAcABwABAAEAAAAcAAYABwABAAEAAAAcAAUABwABAAEAAAAcAAQABwABAAEAAAAcAAMABwABAAEAAAAcAAIABwABAAEAAAAcAAEABwABAAEAAAAbAB4ABwABAAIAAAAbAB0ABwABAAEAAAAbABwABwABAAEAAAAbABsABwABAAEAAAAbABoABwABAAEAAAAbABkABwABAAEAAAAbABgABwABAAEAAAAbABcABwABAAEAAAAbABYABwABAAEAAAAbABUABwABAAAAAAAbABQACAAAAAIAAAAbABMACAAAAAIAAAAbABIACAAAAAIAAAAbABEACAAAAAIAAAAbAAkABwABAAIAAAAbAAgABwABAAEAAAAbAAcABwABAAEAAAAbAAYABwABAAEAAAAbAAUABwABAAEAAAAbAAQABwABAAEAAAAbAAMABwABAAEAAAAbAAIABwABAAEAAAAbAAEABwABAAEAAAAaAB4ABwABAAIAAAAaAB0ABwABAAEAAAAaABwABwABAAEAAAAaABsABwABAAEAAAAaABoABwABAAEAAAAaABkABwABAAEAAAAaABgABwABAAEAAAAaABcABwABAAEAAAAaABYABwABAAEAAAAaABUABwABAAAAAAAaABQACAAAAAIAAAAaABMACAAAAAIAAAAaABIACAAAAAIAAAAaABEACAAAAAIAAAAaAAkABwABAAIAAAAaAAgABwABAAEAAAAaAAcABwABAAEAAAAaAAYABwABAAEAAAAaAAUABwABAAEAAAAaAAQABwABAAEAAAAaAAMABwABAAEAAAAaAAIABwABAAEAAAAaAAEABwABAAEAAAAZAB4ABwABAAIAAAAZAB0ABwABAAEAAAAZABwABwABAAEAAAAZABsABwABAAEAAAAZABoABwABAAEAAAAZABkABwABAAEAAAAZABgABwABAAEAAAAZABcABwABAAEAAAAZABYABwABAAEAAAAZABUABwABAAAAAAAZABQACAAAAAIAAAAZABMACAAAAAIAAAAZABIACAAAAAIAAAAZABEACAAAAAIAAAAZAAkABwABAAIAAAAZAAgABwABAAEAAAAZAAcABwABAAEAAAAZAAYABwABAAEAAAAZAAUABwABAAEAAAAZAAQABwABAAEAAAAZAAMABwABAAEAAAAZAAIABwABAAEAAAAZAAEABwABAAEAAAAYAB4ABwABAAIAAAAYAB0ABwABAAEAAAAYABwABwABAAEAAAAYABsABwABAAEAAAAYABoABwABAAEAAAAYABkABwABAAEAAAAYABgABwABAAEAAAAYABcABwABAAEAAAAYABYABwABAAEAAAAYABUABwABAAAAAAAYABQACAAAAAIAAAAYABMACAAAAAIAAAAYABIACAAAAAIAAAAYABEACAAAAAIAAAAYAAkABwABAAIAAAAYAAgABwABAAEAAAAYAAcABwABAAEAAAAYAAYABwABAAEAAAAYAAUABwABAAEAAAAYAAQABwABAAEAAAAYAAMABwABAAEAAAAYAAIABwABAAEAAAAYAAEABwABAAEAAAAXAB4ABwABAAIAAAAXAB0ABwABAAEAAAAXABwABwABAAEAAAAXABsABwABAAEAAAAXABoABwABAAEAAAAXABkABwABAAEAAAAXABgABwABAAEAAAAXABcABwABAAEAAAAXABYABwABAAEAAAAXABUABwABAAAAAAAXABQACAAAAAIAAAAXABMACAAAAAIAAAAXABIACAAAAAIAAAAXABEACAAAAAIAAAAXAAkABwABAAIAAAAXAAgABwABAAEAAAAXAAcABwABAAEAAAAXAAYABwABAAEAAAAXAAUABwABAAEAAAAXAAQABwABAAEAAAAXAAMABwABAAEAAAAXAAIABwABAAEAAAAXAAEABwABAAEAAAAWAB4ABwABAAIAAAAWAB0ABwABAAEAAAAWABwABwABAAEAAAAWABsABwABAAEAAAAWABoABwABAAEAAAAWABkABwABAAEAAAAWABgABwABAAEAAAAWABcABwABAAEAAAAWABYABwABAAEAAAAWABUABwABAAAAAAAWABQACAAAAAIAAAAWABMACAAAAAIAAAAWABIACAAAAAIAAAAWABEACAAAAAIAAAAWAAkABwABAAIAAAAWAAgABwABAAEAAAAWAAcABwABAAEAAAAWAAYABwABAAEAAAAWAAUABwABAAEAAAAWAAQABwABAAEAAAAWAAMABwABAAEAAAAWAAIABwABAAEAAAAWAAEABwABAAEAAAAVAB4ABwAAAAIAAAAVAB0ABwAAAAEAAAAVABwABwAAAAEAAAAVABsABwAAAAEAAAAVABoABwAAAAEAAAAVABkABwAAAAEAAAAVABgABwAAAAEAAAAVABcABwAAAAEAAAAVABYABwAAAAEAAAAVABUABwAAAAAAAAAVABQACAAAAAIAAAAVABMACAAAAAIAAAAVABIACAAAAAIAAAAVABEACAAAAAIAAAAVAAkABwAAAAIAAAAVAAgABwAAAAEAAAAVAAcABwAAAAEAAAAVAAYABwAAAAEAAAAVAAUABwAAAAEAAAAVAAQABwAAAAEAAAAVAAMABwAAAAEAAAAVAAIABwAAAAEAAAAVAAEABwAAAAEAAAAUAB4ABAADAAQAAAAUAB0ABAADAAQAAAAUABwABAACAAMAAAAUABQABAACAAIAAAAUABMABAACAAEAAAAUABIABAACAAEAAAAUAAwABAACAAEAAAAUAAsABAACAAEAAAAUAAoABAACAAAAAAAUAAIABAACAAMAAAAUAAEABAADAAQAAAATAB4ABAADAAQAAAATAB0ABAADAAQAAAATABwABAABAAMAAAATABQABAABAAIAAAATABMABAABAAEAAAATABIABAABAAEAAAATABEABAABAAEAAAATAA0ABAABAAEAAAATAAwABAABAAEAAAATAAsABAABAAEAAAATAAoABAABAAAAAAATAAIABAABAAMAAAATAAEABAADAAQAAAASAB4ABAADAAQAAAASAB0ABAADAAQAAAASABwABAABAAMAAAASABQABAABAAIAAAASABMABAABAAEAAAASABEABAAAAAEAAAASAA0ABAAAAAEAAAASAAwABAAGAAEAAAASAAsABAABAAEAAAASAAoABAABAAAAAAASAAIABAABAAMAAAASAAEABAADAAQAAAARAB4ABAACAAIAAAARAB0ABAACAAEAAAARABMABAABAAEAAAARABIABAABAAAAAAARAAsABAABAAEAAAARAAoABAABAAAAAAARAAEABAACAAEAAAAQAB4ABAABAAIAAAAQAB0ABAABAAEAAAAQABwABAAFAAIAAAAQAAIABAAFAAEAAAAQAAEABAABAAEAAAAPAB4ABAABAAIAAAAPAB0ABAABAAEAAAAPABwABAABAAEAAAAPAAIABAABAAEAAAAPAAAABAABAAAAAAAOAB4ABAABAAIAAAAOAB0ABAABAAEAAAAOABwABAAGAAIAAAAOAAIABAAGAAEAAAAOAAEABAABAAEAAAANAB4ABAAAAAIAAAANAB0ABAAAAAEAAAANABMABAABAAEAAAANABIABAABAAAAAAANAAsABAABAAEAAAANAAoABAABAAAAAAANAAIABAAGAAMAAAANAAEABAAAAAEAAAAMAB4ABAADAAQAAAAMAB0ABAADAAQAAAAMABwABAABAAMAAAAMABQABAABAAIAAAAMABMABAABAAEAAAAMAAsABAABAAEAAAAMAAoABAABAAAAAAAMAAIABAABAAMAAAAMAAEABAADAAQAAAALAB4ABAADAAQAAAALAB0ABAADAAQAAAALABwABAABAAMAAAALABQABAABAAIAAAALABMABAABAAEAAAALABIABAABAAEAAAALABEABAABAAEAAAALAA0ABAABAAEAAAALAAwABAABAAEAAAALAAsABAABAAEAAAALAAoABAABAAAAAAALAAIABAABAAMAAAALAAEABAADAAQAAAAKAB4ABAADAAQAAAAKAB0ABAADAAQAAAAKABwABAAAAAMAAAAKABQABAAAAAIAAAAKABMABAAAAAEAAAAKABIABAAAAAEAAAAKABEABAAAAAEAAAAKAA0ABAAAAAEAAAAKAAwABAAAAAEAAAAKAAsABAAAAAEAAAAKAAoABAAAAAAAAAAKAAIABAAAAAMAAAAKAAEABAADAAQAAAAJAB4ABwACAAIAAAAJAB0ABwACAAEAAAAJABwABwACAAEAAAAJABsABwACAAEAAAAJABoABwACAAEAAAAJABkABwACAAEAAAAJABgABwACAAEAAAAJABcABwACAAEAAAAJABYABwACAAEAAAAJABUABwACAAAAAAAJABQACAAAAAIAAAAJABMACAAAAAIAAAAJABIACAAAAAIAAAAJABEACAAAAAIAAAAJAAkABwACAAIAAAAJAAgABwACAAEAAAAJAAYABwACAAEAAAAJAAUABwACAAEAAAAJAAQABwACAAEAAAAJAAMABwACAAEAAAAJAAIABwACAAEAAAAJAAEABwACAAEAAAAIAB4ABwABAAIAAAAIAB0ABwABAAEAAAAIABwABwABAAEAAAAIABsABwABAAEAAAAIABoABwABAAEAAAAIABkABwABAAEAAAAIABgABwABAAEAAAAIABcABwABAAEAAAAIABYABwABAAEAAAAIABUABwABAAAAAAAIABQACAAAAAIAAAAIABMACAAAAAIAAAAIABIACAAAAAIAAAAIABEACAAAAAIAAAAIAAkABwABAAIAAAAIAAgABwABAAEAAAAIAAYABwABAAEAAAAIAAUABwABAAEAAAAIAAQABwABAAEAAAAIAAMABwABAAEAAAAIAAIABwABAAEAAAAIAAEABwABAAEAAAAHAB4ABwABAAIAAAAHAB0ABwABAAEAAAAHABwABwABAAEAAAAHABsABwABAAEAAAAHABoABwABAAEAAAAHABkABwABAAEAAAAHABgABwABAAEAAAAHABcABwABAAEAAAAHABYABwABAAEAAAAHABUABwABAAAAAAAHABQACAAAAAIAAAAHABMACAAAAAIAAAAHABIACAAAAAIAAAAHABEACAAAAAIAAAAHAAkABwABAAIAAAAHAAgABwABAAEAAAAHAAcABwABAAEAAAAHAAYABwABAAEAAAAHAAUABwABAAEAAAAHAAQABwABAAEAAAAHAAMABwABAAEAAAAHAAIABwABAAEAAAAHAAEABwABAAEAAAAGAB4ABwABAAIAAAAGAB0ABwABAAEAAAAGABwABwABAAEAAAAGABsABwABAAEAAAAGABoABwABAAEAAAAGABkABwABAAEAAAAGABgABwABAAEAAAAGABcABwABAAEAAAAGABYABwABAAEAAAAGABUABwABAAAAAAAGABQACAAAAAIAAAAGABMACAAAAAIAAAAGABIACAAAAAIAAAAGABEACAAAAAIAAAAGAAkABwABAAIAAAAGAAgABwABAAEAAAAGAAcABwABAAEAAAAGAAYABwABAAEAAAAGAAUABwABAAEAAAAGAAQABwABAAEAAAAGAAMABwABAAEAAAAGAAIABwABAAEAAAAGAAEABwABAAEAAAAFAB4ABwABAAIAAAAFAB0ABwABAAEAAAAFABwABwABAAEAAAAFABsABwABAAEAAAAFABoABwABAAEAAAAFABkABwABAAEAAAAFABgABwABAAEAAAAFABcABwABAAEAAAAFABYABwABAAEAAAAFABUABwABAAAAAAAFABQACAAAAAIAAAAFABMACAAAAAIAAAAFABIACAAAAAIAAAAFABEACAAAAAIAAAAFAAkABwABAAIAAAAFAAgABwABAAEAAAAFAAcABwABAAEAAAAFAAYABwABAAEAAAAFAAUABwABAAEAAAAFAAQABwABAAEAAAAFAAMABwABAAEAAAAFAAIABwABAAEAAAAFAAEABwABAAEAAAAEAB4ABwABAAIAAAAEAB0ABwABAAEAAAAEABwABwABAAEAAAAEABsABwABAAEAAAAEABoABwABAAEAAAAEABkABwABAAEAAAAEABgABwABAAEAAAAEABcABwABAAEAAAAEABYABwABAAEAAAAEABUABwABAAAAAAAEABQACAAAAAIAAAAEABMACAAAAAIAAAAEABIACAAAAAIAAAAEABEACAAAAAIAAAAEAAkABwABAAIAAAAEAAgABwABAAEAAAAEAAcABwABAAEAAAAEAAYABwABAAEAAAAEAAUABwABAAEAAAAEAAQABwABAAEAAAAEAAMABwABAAEAAAAEAAIABwABAAEAAAAEAAEABwABAAEAAAADAB4ABwABAAIAAAADAB0ABwABAAEAAAADABwABwABAAEAAAADABsABwABAAEAAAADABoABwABAAEAAAADABkABwABAAEAAAADABgABwABAAEAAAADABcABwABAAEAAAADABYABwABAAEAAAADABUABwABAAAAAAADABQACAAAAAIAAAADABMACAAAAAIAAAADABIACAAAAAIAAAADABEACAAAAAIAAAADAAkABwABAAIAAAADAAgABwABAAEAAAADAAcABwABAAEAAAADAAYABwABAAEAAAADAAUABwABAAEAAAADAAQABwABAAEAAAADAAMABwABAAEAAAADAAIABwABAAEAAAADAAEABwABAAEAAAACAB4ABwABAAIAAAACAB0ABwABAAEAAAACABwABwABAAEAAAACABsABwABAAEAAAACABoABwABAAEAAAACABkABwABAAEAAAACABgABwABAAEAAAACABcABwABAAEAAAACABYABwABAAEAAAACABUABwABAAAAAAACABQABAADAAIAAAACABMABAADAAEAAAACABIABAADAAEAAAACABEABAAHAAEAAAACABAABAAFAAEAAAACAA8ABAABAAEAAAACAA4ABAAFAAIAAAACAAwABAADAAEAAAACAAsABAADAAEAAAACAAoABAADAAAAAAACAAkABwABAAIAAAACAAgABwABAAEAAAACAAcABwABAAEAAAACAAYABwABAAEAAAACAAUABwABAAEAAAACAAQABwABAAEAAAACAAMABwABAAEAAAACAAIABwABAAEAAAACAAEABwABAAEAAAABAB4ABwABAAIAAAABAB0ABwABAAEAAAABABwABwABAAEAAAABABsABwABAAEAAAABABoABwABAAEAAAABABkABwABAAEAAAABABgABwABAAEAAAABABcABwABAAEAAAABABYABwABAAEAAAABABUABwABAAAAAAABABQABAADAAQAAAABABMABAADAAQAAAABABIABAADAAQAAAABABEABAABAAIAAAABABAABAABAAEAAAABAA4ABAABAAEAAAABAA0ABAABAAAAAAABAAwABAADAAQAAAABAAsABAADAAQAAAABAAoABAADAAQAAAABAAkABwABAAIAAAABAAgABwABAAEAAAABAAcABwABAAEAAAABAAYABwABAAEAAAABAAUABwABAAEAAAABAAQABwABAAEAAAABAAMABwABAAEAAAABAAIABwABAAEAAAABAAEABwABAAEAAAAAAA8ABAAAAAEAAAAVAAAABwAAAAAAAAAeAA0ABAACAAAAAAAAAAwABAADAAQAAAAAAAsABAADAAQAAAAJAAcABwACAAEAAAAIAAcABwABAAEAAAAfAA4ABAADAAQAAAAfAA8ABAADAAQAAAAfABAABAADAAQAAAAOAP//BAADAAQAAAAPAP//BAADAAQAAAAQAP//BAADAAQAAAAVAAoACAAAAAAAAAAVAAsACAAAAAAAAAAVAAwACAAAAAAAAAAVAA0ACAAAAAAAAAAWAAoACAAAAAAAAAAWAAsACAAAAAAAAAAWAAwACAAAAAAAAAAWAA0ACAAAAAAAAAAXAAoACAAAAAAAAAAXAAsACAAAAAAAAAAXAAwACAAAAAAAAAAXAA0ACAAAAAAAAAAYAAoACAAAAAAAAAAYAAsACAAAAAAAAAAYAAwACAAAAAAAAAAYAA0ACAAAAAAAAAAZAAoACAAAAAAAAAAZAAsACAAAAAAAAAAZAAwACAAAAAAAAAAZAA0ACAAAAAAAAAAaAAoACAAAAAAAAAAaAAsACAAAAAAAAAAaAAwACAAAAAAAAAAaAA0ACAAAAAAAAAAbAAoACAAAAAAAAAAbAAsACAAAAAAAAAAbAAwACAAAAAAAAAAbAA0ACAAAAAAAAAADAAoACAAAAAAAAAADAAsACAAAAAAAAAADAAwACAAAAAAAAAADAA0ACAAAAAAAAAAEAAoACAAAAAAAAAAEAAsACAAAAAAAAAAEAAwACAAAAAAAAAAEAA0ACAAAAAAAAAAFAAoACAAAAAAAAAAFAAsACAAAAAAAAAAFAAwACAAAAAAAAAAFAA0ACAAAAAAAAAAGAAoACAAAAAAAAAAGAAsACAAAAAAAAAAGAAwACAAAAAAAAAAGAA0ACAAAAAAAAAAHAAoACAAAAAAAAAAHAAsACAAAAAAAAAAHAAwACAAAAAAAAAAHAA0ACAAAAAAAAAAIAAoACAAAAAAAAAAIAAsACAAAAAAAAAAIAAwACAAAAAAAAAAIAA0ACAAAAAAAAAAJAAoACAAAAAAAAAAJAAsACAAAAAAAAAAJAAwACAAAAAAAAAAJAA0ACAAAAAAAAAARABUACAAAAAEAAAARABYACAAAAAEAAAARABcACAAAAAEAAAARABgACAAAAAEAAAARABkACAAAAAEAAAARABoACAAAAAEAAAARABsACAAAAAEAAAASABUACAAAAAEAAAASABYACAAAAAEAAAASABcACAAAAAEAAAASABgACAAAAAEAAAASABkACAAAAAEAAAASABoACAAAAAEAAAASABsACAAAAAEAAAATABUACAAAAAEAAAATABYACAAAAAEAAAATABcACAAAAAEAAAATABgACAAAAAEAAAATABkACAAAAAEAAAATABoACAAAAAEAAAATABsACAAAAAEAAAAUABUACAAAAAEAAAAUABYACAAAAAEAAAAUABcACAAAAAEAAAAUABgACAAAAAEAAAAUABkACAAAAAEAAAAUABoACAAAAAEAAAAUABsACAAAAAEAAAARAAMACAAAAAEAAAARAAQACAAAAAEAAAARAAUACAAAAAEAAAARAAYACAAAAAEAAAARAAcACAAAAAEAAAARAAgACAAAAAEAAAARAAkACAAAAAEAAAASAAMACAAAAAEAAAASAAQACAAAAAEAAAASAAUACAAAAAEAAAASAAYACAAAAAEAAAASAAcACAAAAAEAAAASAAgACAAAAAEAAAASAAkACAAAAAEAAAATAAMACAAAAAEAAAATAAQACAAAAAEAAAATAAUACAAAAAEAAAATAAYACAAAAAEAAAATAAcACAAAAAEAAAATAAgACAAAAAEAAAATAAkACAAAAAEAAAAUAAMACAAAAAEAAAAUAAQACAAAAAEAAAAUAAUACAAAAAEAAAAUAAYACAAAAAEAAAAUAAcACAAAAAEAAAAUAAgACAAAAAEAAAAUAAkACAAAAAEAAAAKAAMACAAAAAMAAAAKAAQACAAAAAMAAAAKAAUACAAAAAMAAAAKAAYACAAAAAMAAAAKAAcACAAAAAMAAAAKAAgACAAAAAMAAAAKAAkACAAAAAMAAAALAAMACAAAAAMAAAALAAQACAAAAAMAAAALAAUACAAAAAMAAAALAAYACAAAAAMAAAALAAcACAAAAAMAAAALAAgACAAAAAMAAAALAAkACAAAAAMAAAAMAAMACAAAAAMAAAAMAAQACAAAAAMAAAAMAAUACAAAAAMAAAAMAAYACAAAAAMAAAAMAAcACAAAAAMAAAAMAAgACAAAAAMAAAAMAAkACAAAAAMAAAANAAMACAAAAAMAAAANAAQACAAAAAMAAAANAAUACAAAAAMAAAANAAYACAAAAAMAAAANAAcACAAAAAMAAAANAAgACAAAAAMAAAANAAkACAAAAAMAAAAKABUACAAAAAMAAAAKABYACAAAAAMAAAAKABcACAAAAAMAAAAKABgACAAAAAMAAAAKABkACAAAAAMAAAAKABoACAAAAAMAAAAKABsACAAAAAMAAAALABUACAAAAAMAAAALABYACAAAAAMAAAALABcACAAAAAMAAAALABgACAAAAAMAAAALABkACAAAAAMAAAALABoACAAAAAMAAAALABsACAAAAAMAAAAMABUACAAAAAMAAAAMABYACAAAAAMAAAAMABcACAAAAAMAAAAMABgACAAAAAMAAAAMABkACAAAAAMAAAAMABoACAAAAAMAAAAMABsACAAAAAMAAAANABUACAAAAAMAAAANABYACAAAAAMAAAANABcACAAAAAMAAAANABgACAAAAAMAAAANABkACAAAAAMAAAANABoACAAAAAMAAAANABsACAAAAAMAAAARABwABAAFAAAAAAANABwABAAGAAAAAAAQABsABAACAAEAAAAQABoABAACAAEAAAAQABkABAACAAEAAAAQABgABAACAAEAAAAQABcABAACAAEAAAAQABYABAACAAEAAAAQABUABAACAAEAAAAQABQABAAFAAEAAAAQABMABAABAAEAAAAPABsABAABAAEAAAAPABoABAABAAEAAAAPABkABAABAAEAAAAPABgABAABAAEAAAAPABcABAABAAEAAAAPABYABAABAAEAAAAPABUABAABAAEAAAAPABQABAABAAEAAAAPABMABAABAAEAAAAOABsABAAAAAEAAAAOABoABAAAAAEAAAAOABkABAAAAAEAAAAOABgABAAAAAEAAAAOABcABAAAAAEAAAAOABYABAAAAAEAAAAOABUABAAAAAEAAAAOABQABAAGAAEAAAAOABMABAABAAEAAAANABQABAABAAIAAAARABQABAABAAIAAAAMABIABAAFAAIAAAASABIABAAGAAIAAAAQABIABAABAAAAAAAPABIABAABAAAAAAAOABIABAABAAAAAAAbABAABAABAAIAAAAbAA8ABAABAAEAAAAbAA4ABAABAAAAAAAaABAABAABAAIAAAAaAA8ABAABAAEAAAAaAA4ABAABAAAAAAAZABAABAABAAIAAAAZAA8ABAABAAEAAAAZAA4ABAABAAAAAAAYABAABAABAAIAAAAYAA8ABAABAAEAAAAYAA4ABAABAAAAAAAXABAABAABAAIAAAAXAA8ABAABAAEAAAAXAA4ABAABAAAAAAAWABAABAABAAIAAAAWAA8ABAABAAEAAAAWAA4ABAABAAAAAAAVABAABAABAAIAAAAVAA8ABAABAAEAAAAVAA4ABAABAAAAAAAUABAABAAFAAEAAAAUAA8ABAABAAEAAAAUAA4ABAAFAAIAAAATABAABAABAAEAAAATAA8ABAABAAEAAAATAA4ABAABAAEAAAASABAABAAAAAEAAAASAA8ABAAAAAEAAAASAA4ABAAAAAEAAAALABAABAABAAEAAAALAA8ABAABAAEAAAALAA4ABAABAAEAAAAKABAABAAGAAEAAAAKAA8ABAABAAEAAAAKAA4ABAAGAAIAAAAJABAABAABAAIAAAAJAA8ABAABAAEAAAAJAA4ABAABAAAAAAAIABAABAABAAIAAAAIAA8ABAABAAEAAAAIAA4ABAABAAAAAAAHABAABAABAAIAAAAHAA8ABAABAAEAAAAHAA4ABAABAAAAAAAGABAABAABAAIAAAAGAA8ABAABAAEAAAAGAA4ABAABAAAAAAAFABAABAABAAIAAAAFAA8ABAABAAEAAAAFAA4ABAABAAAAAAAEABAABAABAAIAAAAEAA8ABAABAAEAAAAEAA4ABAABAAAAAAADABAABAABAAIAAAADAA8ABAABAAEAAAADAA4ABAABAAAAAAACAA0ABAAHAAIAAAAQAAsABAABAAEAAAAQAAoABAAFAAIAAAAQAAkABAACAAEAAAAQAAgABAACAAEAAAAQAAcABAACAAEAAAAQAAYABAACAAEAAAAQAAUABAACAAEAAAAQAAQABAACAAEAAAAQAAMABAACAAEAAAAPAAsABAABAAEAAAAPAAoABAABAAEAAAAPAAkABAABAAEAAAAPAAgABAABAAEAAAAPAAcABAABAAEAAAAPAAYABAABAAEAAAAPAAUABAABAAEAAAAPAAQABAABAAEAAAAPAAMABAABAAEAAAAOAAsABAABAAEAAAAOAAoABAAGAAIAAAAOAAkABAAAAAEAAAAOAAgABAAAAAEAAAAOAAcABAAAAAEAAAAOAAYABAAAAAEAAAAOAAUABAAAAAEAAAAOAAQABAAAAAEAAAAOAAMABAAAAAEAAAARAAIABAAFAAMAAAAUAA0ABAACAAEAAAAUABEABAACAAEAAAARAAwABAABAAIAAAAQAAwABAABAAIAAAAPAAwABAABAAIAAAAOAAwABAABAAIAAAAMABEABAACAAEAAAAMABAABAACAAEAAAAMAA8ABAACAAEAAAAMAA4ABAACAAEAAAAMAA0ABAACAAEAAAAMAAwABAAFAAEAAAANAAwABAABAAIAAAAOABAABAADAAQAAAAOAA8ABAADAAQAAAAOAA4ABAADAAQAAAAOAA0ABAADAAQAAAANAA0ABAADAAQAAAANAA4ABAADAAQAAAANAA8ABAADAAQAAAANABAABAADAAQAAAANABEABAADAAQAAAAOABEABAADAAQAAAAPABEABAADAAQAAAAPABAABAADAAQAAAAPAA8ABAADAAQAAAAPAA4ABAADAAQAAAAPAA0ABAADAAQAAAAQAA0ABAADAAQAAAAQAA4ABAADAAQAAAAQAA8ABAADAAQAAAAQABAABAADAAQAAAAQABEABAADAAQAAAARABEABAADAAQAAAARABAABAADAAQAAAARAA8ABAADAAQAAAARAA4ABAADAAQAAAARAA0ABAADAAQAAAA=")
tile_set = ExtResource("9_cjttt")

[node name="interact_map" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAANABEAAAAAAAAACQANAA8AAAAAAAAACgARABAAAAAAAAAACgAQAAwAAAAAAAAACgAOAA8AAAAAAAAACAAPABEAAAAAAAAACAANAA0AAAAAAAAACAANABAAAAAAAAAAAwAOABAAAAAAAAAAAwAMAA8AAAAAAAAAAwAQAA4AAAAAAAAAAwAQAA8AAAAAAAAAAwARAA4AAAAAAAAAAwAPAA0AAAAAAAAAAwAQAA0AAAAAAAAAAwA=")
tile_set = ExtResource("5_grut7")
script = ExtResource("10_jx0bq")

[node name="navigationTiles" type="TileMapLayer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.203922)
z_index = -5
tile_map_data = PackedByteArray("AAAAAAsAAgACAAQAAAAAAAwAAgACAAQAAAAAAA0AAgACAAQAAAAAAA4AAgACAAQAAAAAAA8AAgACAAQAAAAAABAAAgACAAQAAAAAABEAAgACAAQAAAAAABIAAgACAAQAAAAAABMAAgACAAQAAAAAABQAAgACAAQAAAABAAsAAgACAAQAAAABAAwAAgACAAQAAAABAA0AAgACAAQAAAABAA4AAgACAAQAAAABAA8AAgACAAQAAAABABAAAgACAAQAAAABABEAAgACAAQAAAABABIAAgACAAQAAAABABMAAgACAAQAAAABABQAAgACAAQAAAACAAsAAgACAAQAAAACAAwAAgACAAQAAAACAA0AAgACAAQAAAACAA4AAgACAAQAAAACAA8AAgACAAQAAAACABAAAgACAAQAAAACABEAAgACAAQAAAACABIAAgACAAQAAAACABMAAgACAAQAAAAKABwAAgACAAQAAAAKAB0AAgACAAQAAAAKAB4AAgACAAQAAAALAAAAAgACAAQAAAALAAEAAgACAAQAAAALAAIAAgACAAQAAAALABwAAgACAAQAAAALAB0AAgACAAQAAAALAB4AAgACAAQAAAAMAAAAAgACAAQAAAAMAAEAAgACAAQAAAAMAAIAAgACAAQAAAAMABwAAgACAAQAAAAMAB0AAgACAAQAAAAMAB4AAgACAAQAAAANAAAAAgACAAQAAAANAAEAAgACAAQAAAANAAIAAgACAAQAAAANABwAAgACAAQAAAANAB0AAgACAAQAAAANAB4AAgACAAQAAAAOAAAAAgACAAQAAAAOAAEAAgACAAQAAAAOAAIAAgACAAQAAAAOABwAAgACAAQAAAAOAB0AAgACAAQAAAAOAB4AAgACAAQAAAAPAAAAAgACAAQAAAAPAAEAAgACAAQAAAAPAAIAAgACAAQAAAAPABwAAgACAAQAAAAPAB0AAgACAAQAAAAPAB4AAgACAAQAAAAQAAAAAgACAAQAAAAQAAEAAgACAAQAAAAQAAIAAgACAAQAAAAQABwAAgACAAQAAAAQAB0AAgACAAQAAAAQAB4AAgACAAQAAAARAAAAAgACAAQAAAARAAEAAgACAAQAAAARAAIAAgACAAQAAAARABwAAgACAAQAAAARAB0AAgACAAQAAAARAB4AAgACAAQAAAASAAAAAgACAAQAAAASAAEAAgACAAQAAAASAAIAAgACAAQAAAASABwAAgACAAQAAAASAB0AAgACAAQAAAASAB4AAgACAAQAAAATAAAAAgACAAQAAAATAAEAAgACAAQAAAATAAIAAgACAAQAAAATABwAAgACAAQAAAATAB0AAgACAAQAAAATAB4AAgACAAQAAAAbABMAAgACAAQAAAAcABMAAgACAAQAAAAdAAsAAgACAAQAAAAdAAwAAgACAAQAAAAdAA0AAgACAAQAAAAdAA4AAgACAAQAAAAdAA8AAgACAAQAAAAdABAAAgACAAQAAAAdABEAAgACAAQAAAAdABIAAgACAAQAAAAdABMAAgACAAQAAAAeAAsAAgACAAQAAAAeAAwAAgACAAQAAAAeAA0AAgACAAQAAAAeAA4AAgACAAQAAAAeAA8AAgACAAQAAAAeABAAAgACAAQAAAAeABEAAgACAAQAAAAeABIAAgACAAQAAAAeABMAAgACAAQAAAAHABMAAgACAAQAAAAHABIAAgACAAQAAAAHABEAAgACAAQAAAAHABAAAgACAAQAAAAHAA8AAgACAAQAAAAHAA4AAgACAAQAAAAHAA0AAgACAAQAAAAHAAwAAgACAAQAAAAHAAsAAgACAAQAAAADAAsAAgACAAQAAAADAAwAAgACAAQAAAADAA0AAgACAAQAAAADAA4AAgACAAQAAAADAA8AAgACAAQAAAADABAAAgACAAQAAAADABEAAgACAAQAAAADABIAAgACAAQAAAADABMAAgACAAQAAAAEABMAAgACAAQAAAAEABIAAgACAAQAAAAEABEAAgACAAQAAAAEABAAAgACAAQAAAAEAA8AAgACAAQAAAAEAA4AAgACAAQAAAAEAA0AAgACAAQAAAAEAAwAAgACAAQAAAAEAAsAAgACAAQAAAAFAAsAAgACAAQAAAAFAAwAAgACAAQAAAAFAA0AAgACAAQAAAAFAA4AAgACAAQAAAAFAA8AAgACAAQAAAAFABAAAgACAAQAAAAFABEAAgACAAQAAAAFABIAAgACAAQAAAAFABMAAgACAAQAAAAGABMAAgACAAQAAAAGABIAAgACAAQAAAAGABEAAgACAAQAAAAGABAAAgACAAQAAAAGAA8AAgACAAQAAAAGAA4AAgACAAQAAAAGAA0AAgACAAQAAAAGAAwAAgACAAQAAAAGAAsAAgACAAQAAAAIABMAAgACAAQAAAAIABIAAgACAAQAAAAIABEAAgACAAQAAAAIABAAAgACAAQAAAAIAA8AAgACAAQAAAAIAA4AAgACAAQAAAAIAA0AAgACAAQAAAAIAAwAAgACAAQAAAAIAAsAAgACAAQAAAAJAAsAAgACAAQAAAAJAAwAAgACAAQAAAAJAA0AAgACAAQAAAAJAA4AAgACAAQAAAAJAA8AAgACAAQAAAAJABAAAgACAAQAAAAJABEAAgACAAQAAAAJABIAAgACAAQAAAAJABMAAgACAAQAAAAKABMAAgACAAQAAAAKABIAAgACAAQAAAAKABEAAgACAAQAAAAKABAAAgACAAQAAAAKAA8AAgACAAQAAAAKAA4AAgACAAQAAAAKAA0AAgACAAQAAAAKAAwAAgACAAQAAAAKAAsAAgACAAQAAAALAAMAAgACAAQAAAALAAQAAgACAAQAAAALAAUAAgACAAQAAAALAAYAAgACAAQAAAALAAcAAgACAAQAAAALAAgAAgACAAQAAAALAAkAAgACAAQAAAALAAoAAgACAAQAAAALAA0AAgACAAQAAAALAA4AAgACAAQAAAALAA8AAgACAAQAAAALABAAAgACAAQAAAALABEAAgACAAQAAAALABQAAgACAAQAAAALABUAAgACAAQAAAALABYAAgACAAQAAAALABcAAgACAAQAAAALABgAAgACAAQAAAALABkAAgACAAQAAAALABoAAgACAAQAAAALABsAAgACAAQAAAAMABsAAgACAAQAAAAMABoAAgACAAQAAAAMABkAAgACAAQAAAAMABgAAgACAAQAAAAMABcAAgACAAQAAAAMABYAAgACAAQAAAAMABUAAgACAAQAAAAMABQAAgACAAQAAAAMAAoAAgACAAQAAAAMAAkAAgACAAQAAAAMAAgAAgACAAQAAAAMAAcAAgACAAQAAAAMAAYAAgACAAQAAAAMAAUAAgACAAQAAAAMAAQAAgACAAQAAAAMAAMAAgACAAQAAAANAAMAAgACAAQAAAANAAQAAgACAAQAAAANAAUAAgACAAQAAAANAAYAAgACAAQAAAANAAcAAgACAAQAAAANAAgAAgACAAQAAAANAAkAAgACAAQAAAANAAoAAgACAAQAAAANAAsAAgACAAQAAAANABMAAgACAAQAAAANABQAAgACAAQAAAANABUAAgACAAQAAAANABYAAgACAAQAAAANABcAAgACAAQAAAANABgAAgACAAQAAAANABkAAgACAAQAAAANABoAAgACAAQAAAANABsAAgACAAQAAAAOABsAAgACAAQAAAAOABoAAgACAAQAAAAOABkAAgACAAQAAAAOABgAAgACAAQAAAAOABcAAgACAAQAAAAOABYAAgACAAQAAAAOABUAAgACAAQAAAAOABQAAgACAAQAAAAOABMAAgACAAQAAAAOAAsAAgACAAQAAAAOAAoAAgACAAQAAAAOAAkAAgACAAQAAAAOAAgAAgACAAQAAAAOAAcAAgACAAQAAAAOAAYAAgACAAQAAAAOAAUAAgACAAQAAAAOAAQAAgACAAQAAAAOAAMAAgACAAQAAAAPAAMAAgACAAQAAAAPAAQAAgACAAQAAAAPAAUAAgACAAQAAAAPAAYAAgACAAQAAAAPAAcAAgACAAQAAAAPAAgAAgACAAQAAAAPAAkAAgACAAQAAAAPAAoAAgACAAQAAAAPAAsAAgACAAQAAAAPABMAAgACAAQAAAAPABQAAgACAAQAAAAPABUAAgACAAQAAAAPABYAAgACAAQAAAAPABcAAgACAAQAAAAPABgAAgACAAQAAAAPABkAAgACAAQAAAAPABoAAgACAAQAAAAPABsAAgACAAQAAAAQABsAAgACAAQAAAAQABoAAgACAAQAAAAQABkAAgACAAQAAAAQABgAAgACAAQAAAAQABcAAgACAAQAAAAQABYAAgACAAQAAAAQABUAAgACAAQAAAAQABQAAgACAAQAAAAQABMAAgACAAQAAAAQAAsAAgACAAQAAAAQAAoAAgACAAQAAAAQAAkAAgACAAQAAAAQAAgAAgACAAQAAAAQAAcAAgACAAQAAAAQAAYAAgACAAQAAAAQAAUAAgACAAQAAAAQAAQAAgACAAQAAAAQAAMAAgACAAQAAAARAAMAAgACAAQAAAARAAQAAgACAAQAAAARAAUAAgACAAQAAAARAAYAAgACAAQAAAARAAcAAgACAAQAAAARAAgAAgACAAQAAAARAAkAAgACAAQAAAARAAoAAgACAAQAAAARAAsAAgACAAQAAAARABMAAgACAAQAAAARABQAAgACAAQAAAARABUAAgACAAQAAAARABYAAgACAAQAAAARABcAAgACAAQAAAARABgAAgACAAQAAAARABkAAgACAAQAAAARABoAAgACAAQAAAARABsAAgACAAQAAAASABsAAgACAAQAAAASABoAAgACAAQAAAASABkAAgACAAQAAAASABgAAgACAAQAAAASABcAAgACAAQAAAASABYAAgACAAQAAAASABUAAgACAAQAAAASABQAAgACAAQAAAASAAoAAgACAAQAAAASAAkAAgACAAQAAAASAAgAAgACAAQAAAASAAcAAgACAAQAAAASAAYAAgACAAQAAAASAAUAAgACAAQAAAASAAQAAgACAAQAAAASAAMAAgACAAQAAAATAAMAAgACAAQAAAATAAQAAgACAAQAAAATAAUAAgACAAQAAAATAAYAAgACAAQAAAATAAcAAgACAAQAAAATAAgAAgACAAQAAAATAAkAAgACAAQAAAATAAoAAgACAAQAAAATAA0AAgACAAQAAAATAA4AAgACAAQAAAATAA8AAgACAAQAAAATABAAAgACAAQAAAATABEAAgACAAQAAAATABQAAgACAAQAAAATABUAAgACAAQAAAATABYAAgACAAQAAAATABcAAgACAAQAAAATABgAAgACAAQAAAATABkAAgACAAQAAAATABoAAgACAAQAAAATABsAAgACAAQAAAAUABMAAgACAAQAAAAUABIAAgACAAQAAAAUABEAAgACAAQAAAAUABAAAgACAAQAAAAUAA8AAgACAAQAAAAUAA4AAgACAAQAAAAUAA0AAgACAAQAAAAUAAwAAgACAAQAAAAUAAsAAgACAAQAAAAVAAsAAgACAAQAAAAVAAwAAgACAAQAAAAVAA0AAgACAAQAAAAVAA4AAgACAAQAAAAVAA8AAgACAAQAAAAVABAAAgACAAQAAAAVABEAAgACAAQAAAAVABIAAgACAAQAAAAVABMAAgACAAQAAAAWABMAAgACAAQAAAAWABIAAgACAAQAAAAWABEAAgACAAQAAAAWABAAAgACAAQAAAAWAA8AAgACAAQAAAAWAA4AAgACAAQAAAAWAA0AAgACAAQAAAAWAAwAAgACAAQAAAAWAAsAAgACAAQAAAAXAAsAAgACAAQAAAAXAAwAAgACAAQAAAAXAA0AAgACAAQAAAAXAA4AAgACAAQAAAAXAA8AAgACAAQAAAAXABAAAgACAAQAAAAXABEAAgACAAQAAAAXABIAAgACAAQAAAAXABMAAgACAAQAAAAYABMAAgACAAQAAAAYABIAAgACAAQAAAAYABEAAgACAAQAAAAYABAAAgACAAQAAAAYAA8AAgACAAQAAAAYAA4AAgACAAQAAAAYAA0AAgACAAQAAAAYAAwAAgACAAQAAAAYAAsAAgACAAQAAAAZAAsAAgACAAQAAAAZAAwAAgACAAQAAAAZAA0AAgACAAQAAAAZAA4AAgACAAQAAAAZAA8AAgACAAQAAAAZABAAAgACAAQAAAAZABEAAgACAAQAAAAZABIAAgACAAQAAAAZABMAAgACAAQAAAAaABMAAgACAAQAAAAaABIAAgACAAQAAAAaABEAAgACAAQAAAAaABAAAgACAAQAAAAaAA8AAgACAAQAAAAaAA4AAgACAAQAAAAaAA0AAgACAAQAAAAaAAwAAgACAAQAAAAaAAsAAgACAAQAAAAbAAsAAgACAAQAAAAbAAwAAgACAAQAAAAbAA0AAgACAAQAAAAbAA4AAgACAAQAAAAbAA8AAgACAAQAAAAbABAAAgACAAQAAAAbABEAAgACAAQAAAAbABIAAgACAAQAAAAcABIAAgACAAQAAAAcABEAAgACAAQAAAAcABAAAgACAAQAAAAcAA8AAgACAAQAAAAcAA4AAgACAAQAAAAcAA0AAgACAAQAAAAcAAwAAgACAAQAAAAcAAsAAgACAAQAAAAUAB0AAgACAAQAAAAUAB4AAgACAAQAAAAdABQAAgACAAQAAAAeABQAAgACAAQAAAAUAAAAAgACAAQAAAAUAAEAAgACAAQAAAAdAAoAAgACAAQAAAAeAAoAAgACAAQAAAAKAAAAAgACAAQAAAAKAAEAAgACAAQAAAAAAAoAAgACAAQAAAABAAoAAgACAAQAAAATABMAAgACAAQAAAATABIAAgACAAQAAAASABMAAgACAAQAAAALABMAAgACAAQAAAAMABMAAgACAAQAAAALABIAAgACAAQAAAAMABIAAgACAAQAAAANABIAAgACAAQAAAAOABIAAgACAAQAAAAPABIAAgACAAQAAAAQABIAAgACAAQAAAARABIAAgACAAQAAAASABIAAgACAAQAAAARABEAAgACAAQAAAASABEAAgACAAQAAAASABAAAgACAAQAAAASAA8AAgACAAQAAAASAA4AAgACAAQAAAASAA0AAgACAAQAAAARAA0AAgACAAQAAAARAAwAAgACAAQAAAASAAwAAgACAAQAAAATAAwAAgACAAQAAAATAAsAAgACAAQAAAASAAsAAgACAAQAAAAPAAwAAgACAAQAAAAMAAsAAgACAAQAAAAMAAwAAgACAAQAAAALAAsAAgACAAQAAAALAAwAAgACAAQAAAAMAA0AAgACAAQAAAAMAA4AAgACAAQAAAAMABAAAgACAAQAAAAMABEAAgACAAQAAAA=")
tile_set = ExtResource("9_cjttt")

[node name="door_indicator" type="Node2D" parent="."]
z_index = -5

[node name="Sprite2D" type="Sprite2D" parent="door_indicator"]
position = Vector2(2068, 992)
scale = Vector2(0.5, 0.75)
texture = ExtResource("12_w0qmp")
flip_h = true
region_enabled = true
region_rect = Rect2(280, 76, 128, 256)

[node name="Sprite2D2" type="Sprite2D" parent="door_indicator/Sprite2D"]
position = Vector2(-16, -15.9999)
scale = Vector2(1, 0.666667)
texture = ExtResource("12_w0qmp")
flip_h = true
region_enabled = true
region_rect = Rect2(176, 172, 68, 72)

[node name="Sprite2D2" type="Sprite2D" parent="door_indicator"]
position = Vector2(-84, 992)
scale = Vector2(0.5, 0.75)
texture = ExtResource("12_w0qmp")
region_enabled = true
region_rect = Rect2(280, 76, 128, 256)

[node name="Sprite2D2" type="Sprite2D" parent="door_indicator/Sprite2D2"]
position = Vector2(-16, -15.9999)
scale = Vector2(1, 0.666667)
texture = ExtResource("12_w0qmp")
flip_h = true
region_enabled = true
region_rect = Rect2(176, 172, 68, 72)

[node name="Sprite2D3" type="Sprite2D" parent="door_indicator"]
position = Vector2(992, -84)
scale = Vector2(0.75, 0.5)
texture = ExtResource("12_w0qmp")
flip_v = true
region_enabled = true
region_rect = Rect2(0, 0, 256, 128)

[node name="Sprite2D4" type="Sprite2D" parent="door_indicator/Sprite2D3"]
position = Vector2(6.10352e-05, 8)
scale = Vector2(0.666667, 1)
texture = ExtResource("12_w0qmp")
flip_h = true
region_enabled = true
region_rect = Rect2(176, 172, 68, 72)

[node name="Sprite2D4" type="Sprite2D" parent="door_indicator"]
position = Vector2(992, 2068)
scale = Vector2(0.75, 0.5)
texture = ExtResource("12_w0qmp")
region_enabled = true
region_rect = Rect2(0, 0, 256, 128)

[node name="Sprite2D4" type="Sprite2D" parent="door_indicator/Sprite2D4"]
position = Vector2(6.10352e-05, 8)
scale = Vector2(0.666667, 1)
texture = ExtResource("12_w0qmp")
flip_h = true
region_enabled = true
region_rect = Rect2(176, 172, 68, 72)

[node name="enemy_navegation" type="TileMapLayer" parent="."]
visible = false
tile_set = ExtResource("9_cjttt")

[node name="effect_layer" parent="." instance=ExtResource("14_1t3ju")]
tile_map_data = PackedByteArray()

[connection signal="body_entered" from="camera_lock" to="camera_lock" method="_on_body_entered"]
[connection signal="body_exited" from="camera_lock" to="camera_lock" method="_on_body_exited"]
